# opencv_tools

./: .gitignore  README.md
cmake/: cmake_common.bat  cmake_vs2013_x86.bat  common.cmake  cvtool.cmake
cmake/mod_src/: opencv_version.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/cvtool/: program.hpp  program_arg.hpp  utility.hpp
src/common/include/cvtool/utility/: error.hpp  file.hpp  image.hpp
src/common/src/: program.cpp
src/common/src/utility/: error.cpp  file.cpp  image.cpp
src/cv_flip/: CMakeLists.txt
src/cv_flip/src/: main.cpp
src/cv_rename/: CMakeLists.txt
src/cv_rename/src/: main.cpp
